|#2|revathi/vikram| added feature for posting a tweet
What changes have you made?

Why do we need this change?

What can this change impact?

--- a/views/home.pug
+++ b/views/home.pug
@@ -8,7 +8,7 @@ html(lang="en")
     script(src="../js/home.js")
     script(src="../js/request.js")
     title 'twitter'
-  body
+  body(onload="showTweets()")
     div#container()
       div#sideBar()
         div#logo()
@@ -25,3 +25,4 @@ html(lang="en")
           div#tweetButton
             button.primary-btn(onclick='postTweet()') Tweet
         div#tweets()
+        
