--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,7 @@
   width: 98vw;
   display: flex;
   font-family: sans-serif;
+  position: absolute;
 }
 #sideBar {
   border: 0.1vw solid black;
@@ -53,6 +54,7 @@
   border: 0.1vw solid black;
   height: 81%;
   width: 100%;
+  overflow: scroll;
 }
 
 #header > span {
@@ -84,4 +86,37 @@
   margin-left: 50px;
   height: 20px;
   width: 30px;
+}
+
+.tweet {
+  height: 20%;
+  width: 100%;
+  border: 0.1vw solid black;
+}
+
+.userId {
+  display: flex;
+  margin: 0;
+}
+
+.content {
+  font-weight: lighter;
+  font-size: 1.5vw;
+  margin-left: 4vw;
+}
+
+.userId span {
+  font-weight: bold;
+  font-size: 2vw;
+}
+
+.userId img {
+  height: 40px;
+  width: 40px;
+  margin-top: 1vw;
+}
+
+.userName {
+  margin: 1vw;
+  margin-bottom: 0vw;
 }
