--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,37 @@
   width: 100px;
   background-color: black;
 }
-
+body {
+  height: 100vh;
+  width: 100vw;
+  font-family: sans-serif;
+  background-color: whitesmoke;
+}
+#logo {
+  height: 10%;
+  margin: 10% 0% 0% 20%;
+  border-radius: 50%;
+  border: solid 0.5px white;
+}
+.icon {
+  height: 5%;
+  width: 5%;
+  background-color: black;
+}
+.sideBarElements {
+  margin: 15% 0% 0% 20%;
+  font-weight: bold;
+}
+#home {
+  color: steelblue;
+  font-weight: bolder;
+}
+#sideBar {
+  height: 100%;
+  width: 25%;
+  background-color: white;
+  border-right: solid 0.5px lightgray;
+}
 .someBox {
   box-shadow: blue;
   color: white;
