--- a/public/css/home.css
+++ b/public/css/home.css
@@ -69,6 +69,7 @@
 
 .userId {
   display: flex;
+  justify-content: space-between;
   margin: 0;
 }
 
@@ -99,4 +100,31 @@
 .userName {
   margin: 1vw;
   margin-bottom: 0vw;
+}
+
+.profilePart {
+  display: flex;
+}
+
+.optionsButton {
+  cursor: pointer;
+}
+
+.options {
+  display: none;
+  border: 0.1vw solid black;
+  position: relative;
+  bottom: 6vw;
+  left: 55vw;
+  height: 27%;
+  width: 22%;
+}
+
+.options > span {
+  font-size: medium;
+  cursor: pointer;
+  font-size: 1.5vw;
+  position: relative;
+  top: 18%;
+  margin: 2vw;
 }
