spike on home page design

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,13 @@ body {
   width: 25%;
   background-color: white;
   border-right: solid 0.5px lightgray;
+  /* position: absolute; */
+}
+
+#content {
+  height: 100%;
+  width: 100%;
+  display: flex;
 }
 .someBox {
   box-shadow: blue;
