|#2|Revathi/Vikram| Added showTweets feature
What changes have you made?
Added getAllTweet handler

Why do we need this change?
To show all the tweets when user logged in.

What can this change impact?
User can see all their tweets.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -24,7 +24,6 @@
   display: flex;
 }
 #tweets {
-  /* border: 0.1vw solid black; */
   height: 81%;
   width: 100%;
   overflow: scroll;
@@ -52,6 +51,7 @@
   height: 3vw;
   width: 7vw;
   font-size: 1.5vw;
+  cursor: pointer;
 }
 
 #tweetButton {
