--- a/views/home.pug
+++ b/views/home.pug
@@ -9,7 +9,7 @@ html(lang="en")
     script(src="../js/home.js")
     script(src="../js/request.js")
     title 'twitter'
-  body(onload="showTweets()")
+  body(onload="getAllTweets()")
     div#container()
       div#sideBar()
         img#logo(src="../assets/logo.jpg", alt="step-birds")
