--- a/public/css/home.css
+++ b/public/css/home.css
@@ -74,21 +74,22 @@
 }
 
 .content {
-  font-weight: lighter;
-  font-size: 1.5vw;
+  font-weight: 200;
+  font-size: 1.25vw;
   margin-left: 5vw;
 }
 
 .userId span {
-  font-weight: bold;
-  font-size: 2vw;
+  font-weight: 500;
+  font-size: 1.5vw;
 }
 
 .userId img {
-  height: 40px;
-  width: 40px;
-  margin-top: 1vw;
+  height: 30px;
+  width: 30px;
+  margin-top: 2vw;
   margin-left: 1vw;
+  border-radius: 50%;
 }
 
 .homeIcon img {
@@ -98,8 +99,7 @@
 }
 
 .userName {
-  margin: 1vw;
-  margin-bottom: 0vw;
+  margin: 2.2vw 0vw 0vw 1.5vw;
 }
 
 .profilePart {
