|#1|trinangkur/rahit|changed logo

--- a/views/login.pug
+++ b/views/login.pug
@@ -9,7 +9,7 @@ html(lang="en")
     title step-birds
   body
     div#login-box
-      img#logo(src="assets/logo.jpg", alt="step-birds")
+      img#logo(src="assets/logo.png", alt="step-birds")
       h2 step-birds
       form(action="/loginUser", method="get")
         input#login-button(type="submit", value="login")
