--- a/public/css/sideBar.css
+++ b/public/css/sideBar.css
@@ -6,34 +6,61 @@
 
 #logo {
   height: 10%;
-  margin: 10% 0% 0% 20%;
-  border-radius: 50%;
+  margin: 2% 0% 0% 20%;
   border: solid 0.5px white;
 }
-.icon {
-  height: 5%;
-  width: 5%;
-  background-color: black;
-  display: flex;
+
+#search-box {
+  height: 60%;
+  width: 80%;
+  border-radius: 50px;
+  padding-left: 16px;
+  font-size: larger;
+  outline: none;
+  color: rgb(75, 74, 74);
 }
+
+.icon {
+  margin-top: 12%;
+  margin-right: 6%;
+  margin-left: 2%;
+}
+
+.rapper {
+  display: flex;
+  width: 50%;
+  height: 60%;
+  padding-bottom: 10%;
+  padding-left: 4%;
+  cursor: pointer;
+}
+
+.svg-icon {
+  fill: black;
+}
+
+.rapper:hover {
+  color: #8296ec;
+  fill: #8296ec;
+  border-radius: 50px;
+  background-color: rgb(220, 220, 220);
+}
+
 .sideBarElements {
-  margin: 0;
+  margin: 0% 0% 6% 20%;
   font-weight: bold;
   display: flex;
-  margin-left: 5vw;
+  height: 8%;
 }
-.home {
-  color: steelblue;
+
+#home {
+  color: #4a61c8;
   font-weight: bolder;
-  margin-left: 1vw;
 }
+
 #sideBar {
   height: 100%;
   width: 25%;
   background-color: white;
   border-right: solid 0.5px lightgray;
-}
-.someBox {
-  box-shadow: blue;
-  color: white;
 }
