|#3|trinangkur/rahit|added profile serching feature

--- a/views/home.pug
+++ b/views/home.pug
@@ -14,7 +14,7 @@ html(lang="en")
       div#sideBar()
         img#logo(src="../assets/logo.png", alt="step-birds")
         div(class="sideBarElements")
-          input(id="search-box" type="text" placeholder="search")
+          input(id="search-box" type="text" placeholder="search" onkeydown="searchOnEnter(this.value)")
         div(class="sideBarElements")
           div(class="rapper")
             div(class="icon")
