--- a/views/home.pug
+++ b/views/home.pug
@@ -8,9 +8,19 @@ html(lang="en")
     link(rel="stylesheet", href="../css/sideBar.css")
     script(src="../js/home.js")
     script(src="../js/request.js")
-    title 'twitter'
+    title #{title}
   body(onload="getAllTweets()")
     div#container()
+      div#tweetPopUp()
+        div#closeTweetPopUp(onclick="closeTweetPopUp()")
+          span X
+        div#tweetArea()
+          div()
+            img(class="profileIcon" src= '../assets/profileIcon.png' alt='N/A')
+          div()
+            input#tweetText1(type="text" name="name" maxlength=180 placeholder="what's happening...")
+        div#popUpFooter()
+            button.primary-btn(onclick='postTweet(1)') Tweet
       div#sideBar()
         img#logo(src="../assets/logo.png", alt="step-birds")
         div(class="sideBarElements")
@@ -27,13 +37,18 @@ html(lang="en")
               svg(x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30" class="svg-icon")
                 path(d="M 15 3 C 11.686 3 9 5.686 9 9 L 9 10 C 9 13.314 11.686 16 15 16 C 18.314 16 21 13.314 21 10 L 21 9 C 21 5.686 18.314 3 15 3 z M 14.998047 19 C 10.992047 19 5.8520469 21.166844 4.3730469 23.089844 C 3.4590469 24.278844 4.329125 26 5.828125 26 L 24.169922 26 C 25.668922 26 26.539 24.278844 25.625 23.089844 C 24.146 21.167844 19.004047 19 14.998047 19 z")
             h2#home Profile
-
+        div(class="sideBarElements")
+          div(onclick="showTweetPopUp()") 
+            h2#tweetLogo Tweet
       div#contentBox()
         div#header()
           span HOME
         div#tweetBLog()
           div#tweetBox
-            input#tweetText(type="text" name="name" maxlength=180 placeholder="write your tweet...")
+            div()
+              img(class="profileIcon" src= '../assets/profileIcon.png' alt='N/A')
+            div()
+              input#tweetText2(type="text" name="name" maxlength=180 placeholder="what's happening...")
           div#tweetButton
-            button.primary-btn(onclick='postTweet()') Tweet
+            button.primary-btn(onclick='postTweet(2)') Tweet
         div#tweets()
