--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,6 +6,7 @@ body {
   background-color: whitesmoke;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 #container {
@@ -39,7 +40,7 @@ body {
 #tweets {
   height: 81%;
   width: 100%;
-  overflow: scroll;
+  overflow: scroll !important;
 }
 
 #header > span {
