--- a/public/css/home.css
+++ b/public/css/home.css
@@ -140,23 +140,26 @@ body {
   cursor: pointer;
 }
 
+.options:hover {
+  background-color: #d0cccc29;
+}
+
 .options {
   display: none;
-  border: 0.1vw solid black;
   position: relative;
-  bottom: 6vw;
-  left: 55vw;
+  bottom: 5vw;
+  left: 62vw;
   height: 27%;
-  width: 22%;
+  width: 14%;
+  box-shadow: 1px 1px 1px 3px lightgrey;
 }
 
 .options > span {
-  font-size: medium;
   cursor: pointer;
-  font-size: 1.5vw;
+  font-size: 1vw;
   position: relative;
   top: 18%;
-  margin: 2vw;
+  margin: 1vw;
 }
 
 #tweetPopUp {
