--- a/views/home.pug
+++ b/views/home.pug
@@ -8,7 +8,9 @@ html(lang="en")
     link(rel="stylesheet", href="../css/sideBar.css")
     script(src="../js/home.js")
     script(src="../js/request.js")
+    script(src="../js/sideBar.js")
     title=title
+
   body(onload="getAllTweets()")
     div#container()
       div#tweetPopUp()
@@ -18,24 +20,29 @@ html(lang="en")
         div#tweetArea()
           div()
             img(class="profileIcon" src= '../assets/profileIcon.png' alt='N/A')
-          div()
-            input#tweetText1(type="text" name="name" maxlength=180 placeholder="what's happening...")
+          div(class="text-area")
+              input#tweetText1(type="text" name="name" placeholder="what's happening..." onkeydown="showCharCount('tweetText1','count-indicator1', 'counter1', 'popUpFooter')")
+              div(class="char-count")
+                svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")    
+                  circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")    
+                  circle(cx="50%" cy="50%" fill="none" id="count-indicator1" stroke-width="2" r="9" stroke="#4a61c8" stroke-linecap="round" style="stroke-dashoffset: 56; stroke-dasharray: 56.5487;")
+                  text(x="50%" y="50%" text-anchor="middle" stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter1") 180
         div#popUpFooter()
-            button.primary-btn(onclick='postTweet(1)') Tweet
+            button.primary-btn.add-access(onclick='postTweet(1)') Tweet
       div#sideBar()
         img#logo(src="../assets/logo.png", alt="step-birds")
         div(class="sideBarElements")
           input(id="search-box" type="text" placeholder="search" onkeydown="searchOnEnter(this.value)")
         div(class="sideBarElements")
-          div(class="rapper" onclick="assignHome()")
+          div(class="rapper"  onmouseover="changeSvgColour('home')" onmouseleave="restoreSvgColour('home')" onclick="assignHome()")
             div(class="icon")
-              svg(viewBox="0 0 30 30" width="30px" height="30px" class="svg-icon")
-                path(d="M 12 2.0996094 L 1 12 L 4 12 L 4 21 L 10 21 L 10 15 L 14 15 L 14 21 L 20 21 L 20 12 L 23 12 L 12 2.0996094 z")
+              svg(viewBox="0 0 30 30" width="30px" height="30px" class="svg-icon" id="home")
+                path(d="M 12 2 L 0 13 L 4 13 L 4 24 L 10 24 L 10 18 L 14 18 L 14 24 L 20 24 L 20 13 L 24 13 L 12 2 z")
             h2#home Home
         div(class="sideBarElements")
-          div(class="rapper" onclick="assignProfile()")
+          div(class="rapper"   onmouseover="changeSvgColour('profile')" onmouseleave="restoreSvgColour('profile')" onclick="assignProfile()")
             div(class="icon")
-              svg(x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30" class="svg-icon")
+              svg(x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30" id="profile" class="svg-icon")
                 path(d="M 15 3 C 11.686 3 9 5.686 9 9 L 9 10 C 9 13.314 11.686 16 15 16 C 18.314 16 21 13.314 21 10 L 21 9 C 21 5.686 18.314 3 15 3 z M 14.998047 19 C 10.992047 19 5.8520469 21.166844 4.3730469 23.089844 C 3.4590469 24.278844 4.329125 26 5.828125 26 L 24.169922 26 C 25.668922 26 26.539 24.278844 25.625 23.089844 C 24.146 21.167844 19.004047 19 14.998047 19 z")
             h2#home Profile
         div(class="sideBarElements")
@@ -49,8 +56,13 @@ html(lang="en")
           div#tweetBox
             div()
               img(class="profileIcon" src= '../assets/profileIcon.png' alt='N/A')
-            div()
-              input#tweetText2(type="text" name="name" maxlength=180 placeholder="what's happening...")
+            div(class="text-area")
+              input#tweetText2(type="text" name="name" placeholder="what's happening..." onkeydown="showCharCount('tweetText2','count-indicator2', 'counter2', 'tweetButton')")
+              div(class="char-count")
+                svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")    
+                  circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")    
+                  circle(cx="50%" cy="50%" fill="none" id="count-indicator2" stroke-width="2" r="9" stroke="#4a61c8" stroke-linecap="round" style="stroke-dashoffset: 56; stroke-dasharray: 56.5487;")
+                  text(x="50%" y="50%" text-anchor="middle" stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter2") 180
           div#tweetButton
-            button.primary-btn(onclick='postTweet(2)') Tweet
+            button.primary-btn.add-access(onclick='postTweet(2)') Tweet
         div#tweets()
