--- a/views/home.pug
+++ b/views/home.pug
@@ -21,7 +21,7 @@ html(lang="en")
           div()
             img(class="profileIcon" src= '../assets/profileIcon.png' alt='N/A')
           div(class="text-area")
-              input#tweetText1(type="text" name="name" placeholder="what's happening..." onkeydown="showCharCount('tweetText1','count-indicator1', 'counter1', 'popUpFooter')")
+              textarea#tweetText1(name="name", cols="90", rows="10" placeholder="what's happening..." onkeydown="showCharCount('tweetText1','count-indicator1', 'counter1', 'popUpFooter')")
               div(class="char-count")
                 svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")    
                   circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")    
@@ -57,7 +57,7 @@ html(lang="en")
             div()
               img(class="profileIcon" src= '../assets/profileIcon.png' alt='N/A')
             div(class="text-area")
-              input#tweetText2(type="text" name="name" placeholder="what's happening..." onkeydown="showCharCount('tweetText2','count-indicator2', 'counter2', 'tweetButton')")
+              textarea#tweetText2(name="name", cols="90", rows="10" placeholder="what's happening..." onkeydown="showCharCount('tweetText2','count-indicator2', 'counter2', 'tweetButton')")
               div(class="char-count")
                 svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")    
                   circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")    
