--- a/views/profile.pug
+++ b/views/profile.pug
@@ -22,7 +22,7 @@ html(lang="en")
           div()
             img(class="profileIcon" src=userUrl alt='N/A')
           div(class="text-area")
-              input#tweetText3(type="text" name="name" placeholder="what's happening..." onkeydown="showCharCount('tweetText3','count-indicator3', 'counter3', 'popUpFooter')")
+              textarea#tweetText3(name="name", cols="90", rows="10" placeholder="what's happening..." onkeydown="showCharCount('tweetText3','count-indicator3', 'counter3', 'popUpFooter')")
               div(class="char-count")
                 svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")    
                   circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")    
