--- a/views/home.pug
+++ b/views/home.pug
@@ -28,7 +28,7 @@ html(lang="en")
                   circle(cx="50%" cy="50%" fill="none" id="count-indicator1" stroke-width="2" r="9" stroke="#4a61c8" stroke-linecap="round" style="stroke-dashoffset: 56; stroke-dasharray: 56.5487;")
                   text(x="50%" y="50%" text-anchor="middle" stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter1") 180
         div#popUpFooter()
-            button.primary-btn.add-access(onclick='postTweet(1)') Tweet
+            button.primary-btn.add-access(onclick="postTweet(1)") Tweet
       div#sideBar()
         img#logo(src="../assets/logo.png", alt="step-birds")
         div(class="sideBarElements")
@@ -64,5 +64,5 @@ html(lang="en")
                   circle(cx="50%" cy="50%" fill="none" id="count-indicator2" stroke-width="2" r="9" stroke="#4a61c8" stroke-linecap="round" style="stroke-dashoffset: 56; stroke-dasharray: 56.5487;")
                   text(x="50%" y="50%" text-anchor="middle" stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter2") 180
           div#tweetButton
-            button.primary-btn.add-access(onclick='postTweet(2)') Tweet
+            button.primary-btn.add-access(onclick="postTweet(2); showCharCount('tweetText2','count-indicator2', 'counter2', 'tweetButton')") Tweet
         div#tweets()
