--- a/public/css/home.css
+++ b/public/css/home.css
@@ -86,7 +86,7 @@ body {
 }
 
 .tweet {
-  height: 20%;
+  height: 26%;
   width: 100%;
   border-bottom: solid 0.5px lightgray;
 }
@@ -105,6 +105,10 @@ body {
   font-weight: 200;
   font-size: 1.25vw;
   margin-left: 5vw;
+  word-wrap: break-word;
+  white-space: initial;
+  width: 85%;
+  line-height: 25px;
 }
 
 .userId span {
@@ -138,27 +142,23 @@ body {
   cursor: pointer;
 }
 
-.options:hover {
-  background-color: #d0cccc29;
-}
-
 .options {
   display: none;
   position: relative;
-  bottom: 5vw;
-  left: 62vw;
+  bottom: 7vw;
+  left: 63vw;
   height: 27%;
   width: 14%;
-  box-shadow: 1px 1px 1px 3px lightgrey;
-  cursor: pointer;
+  border: 0.1vw solid lightgray;
   border-radius: 6px;
+  background: white;
 }
 
-.options > span {
+.delete-tweet > span {
   font-size: 1vw;
-  position: relative;
-  top: 18%;
-  margin: 1vw;
+  margin: 7% 10% 8% 7%;
+  padding: 0;
+  color: rgb(230, 91, 133);
 }
 
 #tweetPopUp {
@@ -214,7 +214,6 @@ body {
 
 textarea {
   resize: none;
-
 }
 
 input:focus,
@@ -268,4 +267,16 @@ select:focus {
 .add-access {
   background-color: #4a61c8;
   cursor: pointer;
+}
+
+.delete-tweet {
+  display: flex;
+  cursor: pointer;
+  justify-content: space-around;
+}
+
+.delete-tweet img {
+  height: 34px;
+  width: 30px;
+  margin: 2%;
 }
