--- a/views/profile.pug
+++ b/views/profile.pug
@@ -29,7 +29,7 @@ html(lang="en")
                   circle(cx="50%" cy="50%" fill="none" id="count-indicator3" stroke-width="2" r="9" stroke="#4a61c8" stroke-linecap="round" style="stroke-dashoffset: 56; stroke-dasharray: 56.5487;")
                   text(x="50%" y="50%" text-anchor="middle" stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter3") 180
         div#popUpFooter()
-            button.primary-btn.add-access(onclick="postTweet(3)") Tweet
+            button.primary-btn.add-access(onclick="postTweet(3);showCharCount('tweetText3','count-indicator3', 'counter3', 'popUpFooter')") Tweet
       div#sideBar()
         img#logo(src="../../assets/logo.png", alt="step-birds")
         div(class="sideBarElements")
@@ -59,4 +59,4 @@ html(lang="en")
 
         div#option-bar
           h3 Tweets
-        div#tweets()
+        div#tweets(name=id)
