|#4|trinangkur/vikram| Added button for follow and unfollow someone
What changes have you made?
Chaning follower and following count in profile

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -7,10 +7,7 @@
   height: 25%;
 }
 
-#profile-name,
-#profile-id {
-  margin-left: 2%;
-}
+
 
 #profile-pic {
   height: 70%;
@@ -20,9 +17,22 @@
 }
 
 #tweets {
-  height: 52%;
+  height: 45%;
 }
 
 .tweet {
-  height: 38%;
+  height: 50%;
+}
+
+#user-panel{
+  display: flex;
+  justify-content: space-between;
+}
+
+#user-info{
+  margin-left: 2%;
+}
+
+#user-options{
+  margin-right: 2%;  
 }
