--- a/views/home.pug
+++ b/views/home.pug
@@ -11,7 +11,7 @@ html(lang="en")
     script(src="../js/sideBar.js")
     title=title
 
-  body(onload=displayTweet id=id)
+  body(onload=displayTweet)
     div#container()
       div#tweetPopUp()
         div#closeTweetPopUp
