|#4|trinangkur/vikram| showing all tweets of user and tweeter whome user followed

--- a/views/home.pug
+++ b/views/home.pug
@@ -11,7 +11,7 @@ html(lang="en")
     script(src="../js/sideBar.js")
     title=title
 
-  body(onload=displayTweet)
+  body(onload="main()")
     div#container()
       div#tweetPopUp()
         div#closeTweetPopUp
