--- a/public/css/sideBar.css
+++ b/public/css/sideBar.css
@@ -1,13 +1,99 @@
-#box {
-  height: 100px;
-  width: 100px;
-  background-color: black;
+body {
+  height: 98vh;
+  width: 100vw;
+  font-family: sans-serif;
+  position: absolute;
+  background-color: whitesmoke;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  display: flex;
 }
 
-#logo {
+#tweetPopUp {
+  background-color: white;
+  display: none;
+  top: 50px;
+  left: 70px;
+  right: 0;
+  margin: auto;
+  position: absolute;
+  height: 18vw;
+  width: 37vw;
+  border: 0.1px solid black;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px 3px lightgrey;
+}
+
+#closeTweetPopUp {
   height: 10%;
-  margin: 2% 0% 0% 20%;
-  border: solid 0.5px white;
+  width: 96%;
+  border-bottom: 0.1vw solid grey;
+  padding: 2% 2%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#closeTweetPopUp > span {
+  cursor: pointer;
+}
+
+#tweetArea {
+  height: 60%;
+  display: flex;
+  width: 100%;
+}
+
+#tweetArea img {
+  width: 40px;
+  margin-top: 1vw;
+  margin-left: 1vw;
+  border-radius: 50%;
+}
+
+#tweetArea textarea {
+  border: none;
+  width: 28vw;
+  text-decoration: none;
+  margin-top: 1vw;
+  margin-left: 1vw;
+  font-size: 1.5vw;
+}
+
+textarea {
+  resize: none;
+  font-family: sans-serif;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+}
+
+#popUpFooter button {
+  position: relative;
+  font-size: 1.2vw;
+  left: 83%;
+  border: none;
+  color: white;
+  border-radius: 50px;
+  margin: 1% 0% 0% 4%;
+  height: 13%;
+}
+
+#left-side-bar {
+  height: 100%;
+  width: 25%;
+  background-color: white;
+  border-right: solid 0.5px lightgray;
+}
+
+.sideBarElements {
+  margin: 0% 0% 6% 20%;
+  font-weight: bold;
+  display: flex;
+  height: 8%;
 }
 
 #search-box {
@@ -18,54 +104,6 @@
   font-size: larger;
   outline: none;
   color: rgb(75, 74, 74);
-}
-
-.icon {
-  margin-top: 12%;
-  margin-right: 6%;
-  margin-left: 2%;
-}
-
-.rapper {
-  display: flex;
-  width: 50%;
-  height: 60%;
-  padding-bottom: 10%;
-  padding-left: 4%;
-  cursor: pointer;
-}
-
-.svg-icon {
-  fill: black;
-}
-
-.change-svg-colour {
-  fill: #4a61c8;
-}
-
-.rapper:hover {
-  color: #8296ec;
-  border-radius: 50px;
-  background-color: rgb(220, 220, 220);
-}
-
-.sideBarElements {
-  margin: 0% 0% 6% 20%;
-  font-weight: bold;
-  display: flex;
-  height: 8%;
-}
-
-#home {
-  color: #4a61c8;
-  font-weight: bolder;
-}
-
-#sideBar {
-  height: 100%;
-  width: 25%;
-  background-color: white;
-  border-right: solid 0.5px lightgray;
 }
 
 #tweetLogo {
@@ -79,4 +117,71 @@
   border-radius: 50px;
   margin-left: 10%;
   font-weight: 100;
+}
+
+.rapper {
+  display: flex;
+  width: 50%;
+  height: 60%;
+  padding-bottom: 10%;
+  padding-left: 4%;
+  cursor: pointer;
+}
+
+.icon {
+  margin-top: 12%;
+  margin-right: 6%;
+  margin-left: 2%;
+}
+
+.svg-icon {
+  fill: black;
+}
+
+#box {
+  height: 100px;
+  width: 100px;
+  background-color: black;
+}
+
+#logo {
+  height: 10%;
+  margin: 2% 0% 0% 20%;
+  border: solid 0.5px white;
+}
+
+
+#home {
+  color: #4a61c8;
+  font-weight: bolder;
+}
+
+.change-svg-colour {
+  fill: #4a61c8;
+}
+
+.rapper:hover {
+  color: #8296ec;
+  border-radius: 50px;
+  background-color: rgb(220, 220, 220);
+}
+
+#right-side-bar {
+  height: 100%;
+  width: 25%;
+  background-color: white;
+  border-left: solid 0.5px lightgray;
+}
+
+#tweet-box {
+  display: flex;
+  width: 96%;
+  padding: 2%;
+  height: 63%;
+}
+
+.char-count {
+  height: 46px;
+  width: 26px;
+  margin: 0% 0% 0% -10%;
 }
