--- a/views/home.pug
+++ b/views/home.pug
@@ -1,68 +1,33 @@
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    link(rel="stylesheet", href="../css/home.css")
-    link(rel="stylesheet", href="../css/sideBar.css")
-    script(src="../js/home.js")
-    script(src="../js/request.js")
-    script(src="../js/sideBar.js")
-    title=title
+head
+  link(rel="stylesheet", href="/css/home.css")
+  script(src="/js/home.js")
 
-  body(onload="main()")
-    div#container()
-      div#tweetPopUp()
-        div#closeTweetPopUp
-          span(onclick="closeTweetPopUp()") X
-          span#user-id @#{userId}
-        div#tweetArea()
-          div()
-            img(class="profileIcon" src=image_url alt='../assets/profileIcon.png')
-          div(class="text-area")
-              textarea#tweetText1(name="name", cols="90", rows="10" placeholder="what's happening..." onkeydown="showCharCount('tweetText1','count-indicator1', 'counter1', 'popUpFooter')")
-              div(class="char-count")
-                svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")    
-                  circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")    
-                  circle(cx="50%" cy="50%" fill="none" id="count-indicator1" stroke-width="2" r="9" stroke="#4a61c8" stroke-linecap="round" style="stroke-dashoffset: 56; stroke-dasharray: 56.5487;")
-                  text(x="50%" y="50%" text-anchor="middle" stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter1") 180
-        div#popUpFooter()
-            button.primary-btn.add-access(onclick="postTweet(1);showCharCount('tweetText1','count-indicator1', 'counter1', 'popUpFooter')") Tweet
-      div#sideBar()
-        img#logo(src="../assets/logo.png", alt="step-birds")
-        div(class="sideBarElements")
-          input(id="search-box" type="text" placeholder="search" onkeydown="searchOnEnter(this.value)")
-        div(class="sideBarElements")
-          div(class="rapper"  onmouseover="changeSvgColour('home')" onmouseleave="restoreSvgColour('home')" onclick="assignHome()")
-            div(class="icon")
-              svg(viewBox="0 0 30 30" width="30px" height="30px" class="svg-icon" id="home")
-                path(d="M 12 2 L 0 13 L 4 13 L 4 24 L 10 24 L 10 18 L 14 18 L 14 24 L 20 24 L 20 13 L 24 13 L 12 2 z")
-            h2#home Home
-        div(class="sideBarElements")
-          div(class="rapper"   onmouseover="changeSvgColour('profile')" onmouseleave="restoreSvgColour('profile')" onclick="assignProfile()")
-            div(class="icon")
-              svg(x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30" id="profile" class="svg-icon")
-                path(d="M 15 3 C 11.686 3 9 5.686 9 9 L 9 10 C 9 13.314 11.686 16 15 16 C 18.314 16 21 13.314 21 10 L 21 9 C 21 5.686 18.314 3 15 3 z M 14.998047 19 C 10.992047 19 5.8520469 21.166844 4.3730469 23.089844 C 3.4590469 24.278844 4.329125 26 5.828125 26 L 24.169922 26 C 25.668922 26 26.539 24.278844 25.625 23.089844 C 24.146 21.167844 19.004047 19 14.998047 19 z")
-            h2#home Profile
-        div(class="sideBarElements")
-          div(onclick="showTweetPopUp()") 
-            h2#tweetLogo Tweet
+  include ./commonPart.pug
 
-      div#contentBox()
-        div#header()
-          span HOME
-        div#tweetBLog()
-          div#tweetBox
-            div()
-              img(class="profileIcon" src=image_url alt='../assets/profileIcon.png')
-            div(class="text-area")
-              textarea#tweetText2(name="name", cols="90", rows="10" placeholder="what's happening..." onkeydown="showCharCount('tweetText2','count-indicator2', 'counter2', 'tweetButton')")
-              div(class="char-count")
-                svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")    
-                  circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")    
-                  circle(cx="50%" cy="50%" fill="none" id="count-indicator2" stroke-width="2" r="9" stroke="#4a61c8" stroke-linecap="round" style="stroke-dashoffset: 56; stroke-dasharray: 56.5487;")
-                  text(x="50%" y="50%" text-anchor="middle" stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter2") 180
-          div#tweetButton
-            button.primary-btn.add-access(onclick="postTweet(2); showCharCount('tweetText2','count-indicator2', 'counter2', 'tweetButton')") Tweet
-        div#tweets(name=userId)
+#content-box()
+  #header()
+    span HOME
+  #tweets-section
+    #tweet-bLog
+      #tweet-box  
+        div
+          img.profileIcon(src="https://avatars0.githubusercontent.com/u/58026094?v=4"
+          alt="../assets/profileIcon.png")
+        .text-area
+          textarea#tweetText2(
+          name="name"
+          cols="90"
+          rows="10"
+          placeholder="what's happening..."
+          onkeydown="showCharCount('tweetText2','count-indicator2', 'counter2', 'tweet-button')")
+      #tweet-blog-elements
+        #tweet-button
+          button.primary-btn.add-access(onclick="postTweet(2); showCharCount('tweetText2','count-indicator2', 'counter2', 'tweet-button')") Tweet
+        .char-count
+          svg(height="100%" viewBox="0 0 20 20" width="100%" style="overflow: visible;")
+            circle(cx="50%" cy="50%" fill="none" stroke-width="2" r="9" stroke="#E6ECF0")
+            circle(cx="50%" cy="50%" fill="none" id="count-indicator2" stroke-width="2" r="9" stroke="#4a61c8"         stroke-linecap="round" style="stroke-dashoffset: 56;stroke-dasharray: 56.5487;")
+            text(x="50%" y="50%" text-anchor="middle"              stroke="black" stroke-width="0.1px" dy=".3em" font-size="8px" id="counter2") 180
+    #tweets(name=userId)
+      #tweet
+#right-side-bar
