--- a/views/home.pug
+++ b/views/home.pug
@@ -11,7 +11,7 @@ head
     #tweet-bLog
       #tweet-box  
         div
-          img.profileIcon(src="https://avatars0.githubusercontent.com/u/58026094?v=4"
+          img.profileIcon(src=image_url
           alt="../assets/profileIcon.png")
         .text-area
           textarea#tweetText2(
