--- a/public/css/tweet.css
+++ b/public/css/tweet.css
@@ -23,7 +23,13 @@
 
 #tweets-section {
   height: 100%;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
 
 #tweet-box img {
@@ -108,14 +114,15 @@
 }
 
 .user-name {
-  font-size: x-large;
-  font-weight: 600;
+  font-size: larger;
+  margin: 1% 1% 0% 0%;
+  font-weight: 500;
 }
 
 .user-id,
 .time-stamp {
   color: gray;
-  padding-top: 1.2%;
+  padding-top: 1.8%;
 }
 
 .content {
@@ -228,4 +235,13 @@
   height: 34px;
   width: 30px;
   margin: 2%;
+}
+
+.red {
+  fill: red;
+  stroke: red;
+}
+
+.black {
+  stroke: rgb(151, 148, 148);
 }
