|#4|Trinangkur/Vikram| Added timestamp in tweet.
What changes have you made?
Added moment in frontend for showing time

Why do we need this change?
To show how long from tweet has been posted

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,6 +1,9 @@
 head
   link(rel="stylesheet", href="/css/profile.css")
   script(src="/js/profile.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    type="text/javascript")
+
   include ./commonPart.pug
 body(onload="main()") 
   div#content-box()
