--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,8 @@
 head
   link(rel="stylesheet", href="/css/home.css")
   script(src="/js/home.js")
-
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+      type="text/javascript")
   include ./commonPart.pug
 
 #content-box()
