--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,6 +1,7 @@
 #option-bar {
   display: flex;
   justify-content: space-around;
+  border-bottom: 0.5px solid lightgray;
 }
 
 #profile-icon {
@@ -36,7 +37,9 @@
 }
 
 #tweets {
-  height: 45%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .tweet {
