|#4|vikram/trinangkur| made all user iamges and name clickable
onclick it redirect you to the user's profile

--- a/public/css/tweet.css
+++ b/public/css/tweet.css
@@ -93,6 +93,7 @@
 
 .dp {
   width: 10%;
+  cursor: pointer;
 }
 
 .dp > img {
@@ -115,8 +116,14 @@
 
 .user-name {
   font-size: larger;
+  color: #373737;
   margin: 1% 1% 0% 0%;
   font-weight: 500;
+  cursor: pointer;
+}
+
+.user-name :hover {
+  color: black;
 }
 
 .user-id,
