--- a/public/css/sideBar.css
+++ b/public/css/sideBar.css
@@ -77,6 +77,7 @@ select:focus {
   left: 83%;
   border: none;
   color: white;
+  outline: none;
   border-radius: 50px;
   margin: 1% 0% 0% 4%;
   height: 13%;
